
cmake_minimum_required(VERSION 2.8)

set(PROJ_NAME demos)

add_subdirectory("demo1_module")
add_subdirectory("demo2_modulecomponent")
add_subdirectory("demo3_modules")

add_subdirectory("demo4_lua")
add_subdirectory("demo5_netserver")
add_subdirectory("demo5_netclient")
add_subdirectory("demo6_actor")
add_subdirectory("demo7_chatclient")
add_subdirectory("demo7_chatserver")

